# newscheck

./: Cargo.toml  LICENSE  PKGBUILD  README.md  man.md  newscheck.hook
src/: feed.rs  main.rs  read_list.rs  term.rs
